syntax = "proto3";

package pb;

option go_package = "go-expert-list-orders/internal/pb";

service OrderService {
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse) {}
}

message ListOrdersRequest {}

message Order {
  string id = 1;
  string customer_id = 2;
  string status = 3;
  double total_amount = 4;
  string created_at = 5;
  string updated_at = 6;
}

message ListOrdersResponse {
  repeated Order orders = 1;
}